[package]
name = "rlnk"
version = "0.1.1"
edition = "2018"
description="create windows lnk file"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rlnk/"
readme = "README.md"
keywords = ["windows","lnk"]
repository = "https://github.com/dobefore/rlnk.git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
