[package]
name = "rlnk"
version = "0.1.6"
edition = "2018"
description="create windows shortcuts (lnk files)"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rlnk/"
readme = "README.md"
keywords = ["windows","lnk","shortcut"]
repository = "https://github.com/dobefore/rlnk.git"

[dependencies]
